class UserData(): #dto
    def __init__(self, id: str, password: str):
        self.id = id
        self.password = password